# sendMessageThroughNetwork

./: CMakeLists.txt  SocketHelper.cpp  SocketHelper.h
client/: main_client.cpp
server/: main_server.cpp
